replace deprecated newInstance() with getDeclaredConstructor().newInstance()